--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -149,7 +149,7 @@ export const prerender = true;
 
       <div class="footer-section">
         Source: CoinGecko (Client-Side).<br/>
-        <strong>EDUCATIONAL USE ONLY.</strong> Not financial advice.
+        <strong>EDUCATIONAL USE ONLY.</strong> Not financial advice.<br>Copyright 2026 Metalz-Calc
       </div>
     </div>
 
